# nrf52840-m2-devkit

./: CMakeLists.txt  README.md  west.yml
boards/makerdiary/nrf52840_m2/: Kconfig.defconfig  Kconfig.nrf52840_m2  board.cmake  board.yml  nrf52840_m2-pinctrl.dtsi  nrf52840_m2-stock-partitions.dtsi  nrf52840_m2.dts  nrf52840_m2.yaml  nrf52840_m2_defconfig  pre_dt_board.cmake
drivers/: CMakeLists.txt
drivers/status_led/: CMakeLists.txt  m2devkit_status_led.c
include/m2devkit/: board.h  soc.h  status_led.h
samples/display/: CMakeLists.txt  README.md  prj.conf  sample.yaml
samples/display/src/: main.c
soc/: CMakeLists.txt  m2devkit_soc.c
src/: main.c
